Fixed Blur on Slop

--- a/Artix/picom/picom.conf
+++ b/Artix/picom/picom.conf
@@ -80,8 +80,8 @@ shadow-offset-y = -15;
 # shadow-exclude = []
 shadow-exclude = [
   "class_g = 'Conky'",
-  "class_g = 'maim'",
   "class_g ?= 'Notify-osd'",
+  "class_g = 'slop'",
   "class_g = 'Cairo-clock'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
@@ -120,8 +120,8 @@ fade-out-step = 0.03;
 
 # Specify a list of conditions of windows that should not be faded.
  fade-exclude = [
-"class_g='maim'",
-"class_g='MEGAsync'"
+"class_g='MEGAsync'",
+"class_g = 'slop'"
 ];
 
 # Do not fade on window open/close.
@@ -160,7 +160,6 @@ active-opacity = 0.98;
 # Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
 focus-exclude = [ "class_g = 'Cairo-clock'", 
-"class_g = 'maim'",
 "class_g = 'MEGAsync'"
 ];
 
@@ -228,6 +227,7 @@ blur-kern = "11x11gaussian";
 # blur-background-exclude = []
 blur-background-exclude = [
   "window_type = 'dock'",
+  "class_g = 'slop'",
   "window_type = 'desktop'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
